--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 800px;
+  height: 800px;
 }
 .App {
   height: 100vh;
